Resolves: fdo#87612 don't overwrite users input if the value is unchanged

so you can enter values without them getting auto-expanded to their
canonical form as you're typing them and having the insertion
point jump to the start causing real confusion. But retain the
improvement of fdo#61704 where the value is set when modified so
clicking "ok" without leaving the field works as expected

Change-Id: I6d6b08a56def9961422b341b3a97dd29d366aa5d
Reviewed-on: https://gerrit.libreoffice.org/13790
Reviewed-by: Michael Stahl <mstahl@redhat.com>
Tested-by: Michael Stahl <mstahl@redhat.com>